Added files via upload

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 				<i class="icon fa-diamond"></i>
 				<h2>Qiadong hobby</h2>
 				<p>Introduction</p>
+				<iframe width="560" height="200" src="file:///H:/Qiadong%20Zhou%20Snow%20per6.swf" frameborder="0" allowfullscreen></iframe>
 				<ul class="actions">
+				
+					
+
 					<li><a href="<img src="images/pic21.jpg"" class="button big special">Learn More</a></li>
 				</ul>
 			</section>
