Added files via upload

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<div class="inner">
 					<header class="major narrow">
 						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
+						<iframe width="560" height="315" src="Qiadong Zhou snowboar per6.swf" frameborder="0" allowfullscreen></iframe>
 					</header>
 					<form action="#" method="POST">
 						<div class="container 75%">
