--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				
 					
 
-					<li><a href="<img src="images/pic21.jpg"" class="button big special">Learn More</a></li>
+					<li><a href="<img src="images/pic21.jpg" class="button big special">Learn More</a></li>
 				</ul>
 			</section>
 
@@ -107,7 +107,7 @@
 						<p>My hometown in China, I came to the United States two years ago. I arrived here very happy, because this is not the same thing and a lot of home. Here there are not happy that I do not speak English, can not keep up in school learning, every day need to review in order to get good results. Fortunately, in the school I know a few good brothers, they always help me in my difficult.</p>
 					</header>
 					<ul class="actions">
-						<li><a href="#" class="button big alt">Magna feugiat</a></li>
+						<li><a href="#" class="button big alt">TOP</a></li>
 					</ul>
 				</div>
 			</section>
