--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				
 					
 
-					<li><a href="#" class="image"><img src="images/pic21.jpg" class="button big special">Learn More</a></li>
+					<li><a href="#" class="button big special">Learn More</a></li>
 				</ul>
 			</section>
 
