--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				
 					
 
-					<li><a href="#" class="button big special">Learn More</a></li>
+					<li><a href="http://qizhou3.github.io/CSS3/" class="button big special">Learn More</a></li>
 				</ul>
 			</section>
 
